src: move handleDrag.. to dragndrop.cpp and add globals.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -391,6 +391,8 @@ set(SOURCES ${SOURCES}
     src/OpenGLDebug.cpp
     src/collection_expression.cpp
     src/strutils.cpp
+    src/globals.cpp
+    src/dragndrop.cpp
 )
 
 if(USE_PLAMBDA)
