--- a/.drone.yml
+++ b/.drone.yml
@@ -13,8 +13,9 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug
   - make
+  - ./tests
   - make install
 
 ---
@@ -33,8 +34,9 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug
   - make
+  - ./tests
   - make install
 
 ---
@@ -54,8 +56,9 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug
   - make
+  - ./tests
   - make install
 
 ---
@@ -74,8 +77,9 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug
   - make
+  - ./tests
   - make install
 
 ---
@@ -94,8 +98,9 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug
   - make
+  - ./tests
   - make install
 
 ---
@@ -114,8 +119,9 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug
   - make
+  - ./tests
   - make install
 
 ---
@@ -131,8 +137,9 @@ steps:
   - pacman -S --noconfirm make gcc cmake sdl2 libpng libtiff libjpeg
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug
   - make
+  - ./tests
   - make install
 
 ---
@@ -147,8 +154,9 @@ steps:
   - dnf install -y make cmake gcc-c++ SDL2-devel libpng-devel libtiff-devel libjpeg-turbo-devel mesa-libGL-devel
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug
   - make
+  - ./tests
   - make install
 
 ---
@@ -163,8 +171,9 @@ steps:
   - dnf install -y make cmake gcc-c++ SDL2-devel libpng-devel libtiff-devel libjpeg-turbo-devel mesa-libGL-devel
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug
   - make
+  - ./tests
   - make install
 
 ---
@@ -204,7 +213,7 @@ steps:
   #- cd ..
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DUSE_GDAL=ON
+  - cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DUSE_GDAL=ON -DCMAKE_BUILD_TYPE=Release
   - make -j6
   - make install DESTDIR=AppDir
   - wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
