CMakeLists.txt: set REPROC_INSTALL to OFF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -330,6 +330,7 @@ endif()
 ##
 #################
 set(REPROC++ ON)
+set(REPROC_INSTALL OFF)
 add_subdirectory(external/reproc)
 set(LIBS ${LIBS} reproc++)
 
