--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
   - ctest
   - make install
@@ -34,7 +34,7 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
   - ctest
   - make install
@@ -56,7 +56,7 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
   - ctest
   - make install
@@ -77,7 +77,7 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
   - ctest
   - make install
@@ -98,7 +98,7 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
   - ctest
   - make install
@@ -119,7 +119,7 @@ steps:
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
   - ctest
   - make install
@@ -138,7 +138,7 @@ steps:
   - pacman -S --noconfirm extra/cargo
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
   - ctest
   - make install
@@ -155,7 +155,7 @@ steps:
   - dnf install -y make cmake gcc-c++ SDL2-devel libpng-devel libtiff-devel libjpeg-turbo-devel mesa-libGL-devel
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
   - ctest
   - make install
@@ -172,7 +172,7 @@ steps:
   - dnf install -y make cmake gcc-c++ SDL2-devel libpng-devel libtiff-devel libjpeg-turbo-devel mesa-libGL-devel
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
   - ctest
   - make install
