fuzzy-finder: start to work on a fuzzy finder library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -345,6 +345,14 @@ target_include_directories(doctest INTERFACE external/doctest)
 
 set(LIBS ${LIBS} doctest)
 
+#################
+##
+##  Rust :o
+##
+#################
+
+add_subdirectory(fuzzy-finder)
+set(LIBS ${LIBS} murkycxx)
 
 #################
 ##
