--- a/fuzzy-finder/Cargo.toml
+++ b/fuzzy-finder/Cargo.toml
@@ -8,6 +8,7 @@ fuzzy-matcher = "0.3"
 ignore = "0.4"
 cxx = { version = "1.0", features = ["c++17"] }
 lru = { version = "0.6", default-features = false }
+lexical-sort = "0.3"
 
 [dev-dependencies]
 tempfile = "3"
