cmake: fix SDL2 link on fedora

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -262,7 +262,8 @@ elseif(APPLE)
 else()
    # maybe one of these will work?
    if(TARGET SDL2::SDL2)
-      set(SDL_LIBS SDL2::SDL2 SDL2::SDL2main)
+      set(SDL_LIBS SDL2::SDL2)
+      # SDL2main is not needed on linux (and broken on fedora)
    else()
       if(SDL2_LIBRARIES)
          string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
