--- a/src/fuzzy-finder/Cargo.toml
+++ b/src/fuzzy-finder/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 fuzzy-matcher = "0.3"
 ignore = "0.4"
 cxx = { version = "1.0", features = ["c++17"] }
-lru = { version = "0.6", default-features = false }
+clru = "0.5"
 lexical-sort = "0.3"
 
 [dev-dependencies]
