ci: use rust for drone/archlinux and github/macos

--- a/.drone.yml
+++ b/.drone.yml
@@ -135,6 +135,7 @@ steps:
   commands:
   - pacman -Syu --noconfirm
   - pacman -S --noconfirm make gcc cmake sdl2 libpng libtiff libjpeg
+  - pacman -S --noconfirm extra/cargo
   - mkdir build
   - cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug
