--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
 
     - name: Install dependencies
       shell: bash
-      run: brew install sdl2 #dylibbundler
+      run: brew install sdl2 rust #dylibbundler
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{github.workspace}}/build
