CMakeLists.txt: force msvcrt release even on debug build when enabling the fuzzy finder
For the moment we only build the Rust lib in release mode, and even if we did support the debug mode as well, it would still link with MD instead of MDd on debug. So we must force MD on vpv if we use the Rust lib.

--- a/src/fuzzy-finder/CMakeLists.txt
+++ b/src/fuzzy-finder/CMakeLists.txt
@@ -12,7 +12,7 @@ add_custom_command(
     COMMAND ${CARGO_EXE} build --manifest-path "${CMAKE_CURRENT_SOURCE_DIR}/Cargo.toml" --target-dir "${CMAKE_CURRENT_BINARY_DIR}/fuzzy-finder" --release
     COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_CURRENT_BINARY_DIR}/include"
     COMMAND ${CMAKE_COMMAND} -E copy_if_different "${FUZZYFINDER_RUST_H}" "${CMAKE_CURRENT_BINARY_DIR}/include/fuzzy-finder.hpp"
-    DEPENDS Cargo.toml src/lib.rs src/cxxbridge.rs
+    DEPENDS Cargo.toml build.rs src/lib.rs src/cxxbridge.rs
     COMMENT "Building fuzzy-finder"
 )
 
