--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,14 @@ else()
     set(CMAKE_C_STANDARD 11)
 endif()
 
+if(USE_FUZZY_FINDER)
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
+    if (NOT POLICY CMP0091 AND MSVC)
+        set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -MD")
+        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -MD")
+    endif()
+endif()
+
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O3")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O3")
 #set(CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -g -O3")
