ci: add --output-on-failure to ctest

--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ steps:
   - cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
-  - ctest
+  - ctest --output-on-failure
   - make install
 
 ---
@@ -36,7 +36,7 @@ steps:
   - cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
-  - ctest
+  - ctest --output-on-failure
   - make install
 
 ---
@@ -58,7 +58,7 @@ steps:
   - cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
-  - ctest
+  - ctest --output-on-failure
   - make install
 
 ---
@@ -79,7 +79,7 @@ steps:
   - cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
-  - ctest
+  - ctest --output-on-failure
   - make install
 
 ---
@@ -100,7 +100,7 @@ steps:
   - cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
-  - ctest
+  - ctest --output-on-failure
   - make install
 
 ---
@@ -121,7 +121,7 @@ steps:
   - cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
-  - ctest
+  - ctest --output-on-failure
   - make install
 
 ---
@@ -140,7 +140,7 @@ steps:
   - cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
-  - ctest
+  - ctest --output-on-failure
   - make install
 
 ---
@@ -157,7 +157,7 @@ steps:
   - cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
-  - ctest
+  - ctest --output-on-failure
   - make install
 
 ---
@@ -174,7 +174,7 @@ steps:
   - cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
   - make
-  - ctest
+  - ctest --output-on-failure
   - make install
 
 ---
