--- a/.woodpecker/nix.yml
+++ b/.woodpecker/nix.yml
@@ -1,9 +1,6 @@
-pipeline:
+steps:
   build:
-    image: nixos/nix
+    image: nixpkgs/nix
     commands:
     - nix --extra-experimental-features nix-command --extra-experimental-features flakes flake check
     - nix --extra-experimental-features nix-command --extra-experimental-features flakes build .
-    volumes:
-    # https://releases.nixos.org/nix-dev/2017-June/023903.html
-    - nix:/nix/
